# seach-mcp-craft-agent

./: .gitignore  COMPLETION_REPORT.md  FINAL_SUMMARY.md  MIGRATION_GUIDE.md  MIGRATION_QUICK_REF.md  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  config.json  craft-agent-config.json  demo.py  google_last_captcha_url.txt  guide.md  install.sh  migrate-mcp.sh  permissions.json  pyproject.toml  test_search.py  verify_setup.py
src/: __init__.py  fetcher.py  server.py  types.py  utils.py
src/engines/: __init__.py  baidu.py  base.py  bing.py  browser_base.py  duckduckgo.py  google.py  yahoo.py
tests/: test_engines.py  test_google_concurrency.py
